# rareskills-course

./: .gitignore  readme.md
day1/: Anchor.toml
day1/programs/got/: Cargo.toml
day1/programs/got/src/: lib.rs
day1/tests/: got.ts
day10/: Anchor.toml  readme.md
day10/tests/: day10.ts
day11/: Anchor.toml  Cargo.toml  readme.md
day11/programs/day11/: Cargo.toml
day11/programs/day11/src/: lib.rs
day11/tests/: day11.ts
day12/: Anchor.toml  readme.md
day12/tests/: day12.ts
day13/: Anchor.toml  readme.md
day13/tests/: day13.ts
day14/: Anchor.toml  readme.md
day14/tests/: day14.ts
day15/: Anchor.toml  redme.md
day15/tests/: day15.ts
day16/: Anchor.toml  readme.md
day16/tests/: day16.ts
day17/: Anchor.toml  readme.md
day17/tests/: day17.ts
day18/: Anchor.toml
day19/: Anchor.toml  readme.md
day2/: Anchor.toml
day2/programs/day2/: Cargo.toml
day2/programs/day2/src/: lib.rs
day20/: Anchor.toml  readme.md
day21/: Anchor.toml  readme.md
day22/: readme.md
day23/: Anchor.toml
day24/: Anchor.toml  readme.md
day25/: Anchor.toml  readme.md
day26/: Anchor.toml
day27/: Anchor.toml  readme.md
day28/: Anchor.toml  readme.md
day29/: Anchor.toml  base58_to_hex.py  readme.md  tempfile
day3/: Anchor.toml
day30/: Anchor.toml  readme.md
day31/: Anchor.toml  readme.md
day32/: Anchor.toml
day33/: Anchor.toml  readme.md
day33/programs/alice/: Cargo.toml
day33/programs/alice/src/: lib.rs
day4/: .gitignore  Anchor.toml
day5/: Anchor.toml
day6/: Anchor.toml
day7/: Anchor.toml
day8/: Cargo.toml  readme.md
day9/: Cargo.toml
(+79 files in other folders)
